--- a/day2/style.css
+++ b/day2/style.css
@@ -42,4 +42,17 @@ body {
 	top: 50%;
 	transform-origin: 100%;
 	transform: rotate(90deg);
+	/* transition: all 0.05s; animation bug */
+	transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
+}
+
+/* shortest hand */
+.hour-hand {
+	left: 15%;
+	width: 35%;
+}
+
+/* thinnest hand */
+.sec-hand {
+	height: 2px;
 }
