--- a/day10/style.css
+++ b/day10/style.css
@@ -1,10 +1,46 @@
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+	box-sizing: border-box;
+	font-family: sans-serif;
+	margin: 0;
+	padding: 0;
 }
 
-body {
-    background: rgb(238, 174, 0);
+html {
+	background: #ffc600;
 }
+
+.inbox {
+	background: #fff;
+	border-radius: 5px;
+	box-shadow: 10px 10px 0 rgba(0,0,0,0.1);
+	max-width: 500px;
+	margin: 10px auto;
+}
+
+.item {
+	display: flex;
+	align-items: center;
+	border-bottom: 1px solid #afaeae;
+}
+
+.item:last-child {
+	border-bottom: 0;
+}
+
+input[type="checkbox"] {
+	margin: 20px;
+}
+
+input:checked + p {
+	background: #ccc;
+	text-decoration: line-through;
+}
+
+p {
+	transition: background 0.2s;
+	font-size: 20px;
+	flex: 1;
+	padding: 20px;
+	margin: 0;
+	border-left: 1px solid #ccc;
 
